get single movie adding isfavorite flag
