# MoviesApi.Swagger/moviesApi_swagger.yaml
@@ -55,6 +55,10 @@ paths:
       operationId: GetMovie
       description: Get a movie by id
       parameters:
+        - name: userId
+          in: query
+          required: false
+          type: string
         - name: movie_id
           in: path
           required: true
@@ -63,7 +67,7 @@ paths:
         200:
           description: Returns a movie
           schema:
-            $ref: "#/definitions/MovieResponse"
+            $ref: "#/definitions/MovieResponseDto"
         401:
           description: Unauthorized
         404:
@@ -87,7 +91,7 @@ paths:
         200:
           description: Returns a list of movies
           schema:
-            $ref: "#/definitions/MoviesResponseDto"
+            $ref: "#/definitions/MovieListDto"
         401:
           description: Unauthorized
         404:
@@ -119,7 +123,7 @@ paths:
          200:
           description: Return a list of favorite movies for a specific user
           schema:
-            $ref: "#/definitions/MoviesResponseDto"
+            $ref: "#/definitions/MovieListDto"
     delete: 
         tags:
             - movies
@@ -148,7 +152,7 @@ paths:
         200:
           description: Return a list of top favorite movies
           schema:
-            $ref: "#/definitions/MoviesResponseDto"
+            $ref: "#/definitions/MovieListDto"
   '/movie/rating/{movieId}':
     get:
       tags:
@@ -266,7 +270,7 @@ paths:
         404:
           description: Person not found
 definitions:
-  MovieResponse:
+  MovieResponseDto:
     type: object
     properties:
       adult:
@@ -329,6 +333,8 @@ definitions:
          type: number
       vote_count:
          type: integer
+      isFavorite:
+         type: boolean
     required:
       - id
 
@@ -398,7 +404,7 @@ definitions:
         type: string
       movieId:
         type: string
-  MoviesResponseDto:
+  MovieListDto:
     type: object
     properties:
       Results:
